# nools-rust

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index-wasm.d.ts  index-wasm.js  index.d.ts  index.js  package-lock.json  package-simple.json  package.json
.github/workflows/: node.js.yml
benches/: fibonacci.rs
examples/: fibonacci.rs  hello_world.rs  state_machine.rs
examples/node/: README.md  counter.ts  hello_world.js  hello_world_wasm.js  package-lock.json  package.json  simple.js
src/: agenda.rs  constraint.rs  error.rs  fact.rs  flow.rs  lib.rs  node.rs  pattern.rs  rule.rs  session.rs  wasm.rs  working_memory.rs
tests/: integration_test.rs
