[package]
name = "nools-rust"
version = "0.1.5"
edition = "2021"
authors = ["Luiz Felipe Weber"]
description = "A rules engine for Rust based on the Rete algorithm"
license = "MIT"
repository = "https://github.com/noolsjs/nools"
homepage = "https://github.com/noolsjs/nools/tree/master/rust"
documentation = "https://docs.rs/nools-rust"
readme = "README.md"
keywords = ["rules", "engine", "rete", "expert-system", "inference"]
categories = ["algorithms", "data-structures"]
exclude = [".gitignore", "target/", "Cargo.lock", "node_modules/", "pkg/"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "nools"
path = "src/lib.rs"

[dependencies]
# WebAssembly bindings - using 0.2.87 for Node.js 12+ compatibility
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Logging for WASM
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1
